--- a/Accounting/Accounting.App/Properties/Resources.resx
+++ b/Accounting/Accounting.App/Properties/Resources.resx
@@ -172,4 +172,7 @@
   <data name="_1371476499_todo_list" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1371476499_todo-list.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="photo_2022_01_19_08_40_40" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\photo_2022-01-19_08-40-40.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
