--- a/Accounting/Accounting.App/Properties/Resources.resx
+++ b/Accounting/Accounting.App/Properties/Resources.resx
@@ -175,4 +175,28 @@
   <data name="photo_2022_01_19_08_40_40" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\photo_2022-01-19_08-40-40.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="add_user_302" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add-user-302.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="arrows_reload_2848" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\arrows-reload-2848.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cash_payment_6401" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cash-payment-6401.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="coin_794" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\coin-794.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="manage_315" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\manage-315.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="money_payment_6400" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\money-payment-6400.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user_group_307" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-group-307.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user_logout_304" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-logout-304.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
