--- a/Accounting/Accounting.App/Properties/Resources.resx
+++ b/Accounting/Accounting.App/Properties/Resources.resx
@@ -199,4 +199,10 @@
   <data name="user_logout_304" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user-logout-304.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pie_chart_683" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pie-chart-683.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tax_calculator_9258" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tax-calculator-9258.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
