--- a/Accounting/Accounting.App/Properties/Resources.resx
+++ b/Accounting/Accounting.App/Properties/Resources.resx
@@ -205,4 +205,7 @@
   <data name="tax_calculator_9258" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tax-calculator-9258.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="user_security_11932" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-security-11932.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
